Created initial fixtures for all tables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,18 @@
         }
     ],
     "cSpell.words": [
+        "gametype",
         "mzdgqh",
         "tpxp",
         "vcqkhyv"
+    ],
+    "cSpell.ignoreWords": [
+        "arneson",
+        "datetime",
+        "gielinor",
+        "gygax",
+        "jagex",
+        "mmorpg",
+        "wargaming"
     ]
 }
