Added a lot of functionality, oops.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,10 @@
         }
     ],
     "cSpell.words": [
+        "asgi",
         "gametype",
         "mzdgqh",
+        "reauthenticate",
         "tpxp",
         "vcqkhyv"
     ],
