Proper handling of joining events from client

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,8 +2,8 @@
 good-names=i,j,ex,pk
 
 [MESSAGES CONTROL]
-disable=broad-except
+disable=broad-except,
 
 [MASTER]
-disable=C0114,
+disable=C0114, line-too-long
 
