Changes settings, added comments for questions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     ],
     "cSpell.ignoreWords": [
         "arneson",
+        "branchname",
         "datetime",
         "gielinor",
         "gygax",
