django templates, other previous functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,9 +24,11 @@
         "arneson",
         "branchname",
         "datetime",
+        "gamesbyuser",
         "gielinor",
         "gygax",
         "jagex",
+        "levelupreports",
         "mmorpg",
         "signup",
         "wargaming"
